src/components/carousel.css
.carousel {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: 50vh;
    padding-left: 10vw;
    padding-right: 10vw;
    padding-top: 20px;
    margin-bottom: 20px;
}

.slide {
    border-radius: 0.5rem;
    width: 60%;
    height: 100%;
    position: absolute; /* Ensure absolute positioning for slide transitions */
    transition: opacity 0.5s ease; /* Smooth transition for visibility */
}

.slide img {
    height: 100%;
    width: 100%;
    object-fit: cover; /* Ensures image covers the entire slide area */
    border-radius: 0.5rem; /* Match the slide's border radius */
    filter: brightness(50%);
}

.slide-hidden {
    opacity: 0;
    visibility: hidden;
}

.arrow {
    position: absolute;
    width: 1.5rem;
    height: 1.5rem;
    color: white;
    z-index: 10; /* Ensure arrows are above slides */
}

.arrow:hover {
    cursor: pointer;
}

.arrow-left {
    left: 23rem;
}

.arrow-right {
    right: 23rem;
}

.indicators {
    display: flex;
    position: absolute;
    bottom: 0.5rem;
    z-index: 10; /* Ensure indicators are above slides */
}

.indicator {
    background-color: white;
    height: 0.5rem;
    width: 0.5rem;
    border-radius: 100%;
    border: none;
    outline: none;
    margin: 0 0.2rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.indicator-inactive {
    background-color: grey;
}

.slide-title {
    position: absolute;
    bottom: 40px;
    color: white;
    padding: 10px;
    left: 20px;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    text-align: left;
}

@media screen and (max-width: 767px) {
    .carousel {
        height: 35vh;
        padding-left: 5vw;
        padding-right: 5vw;
        padding-top: 20px;
    }
    .slide {
        width: 90%;
    }

    .arrow {
        width: 1.3rem;
        height: 1.3rem;
    }
    .arrow-left {
        left: 1.5rem;
    }

    .arrow-right {
        right: 1.5rem;
    }
    .indicator {
        height: 0.3rem;
        width: 0.3rem;
    }
    .slide-title {
        bottom: 20px;
        padding: 10px;
        font-size: 16px;
        font-weight: 600;
    }
}

